# docs/swagger.json
@@ -41,7 +41,7 @@
                                         "actors": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/domain.Actor"
+                                                "$ref": "#/definitions/domain.ActorWithFilms"
                                             }
                                         }
                                     }
@@ -89,7 +89,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Actor"
+                            "$ref": "#/definitions/domain.ActorWithoutFilms"
                         }
                     }
                 ],
@@ -103,7 +103,7 @@
                                     "type": "object",
                                     "properties": {
                                         "actors": {
-                                            "$ref": "#/definitions/domain.Actor"
+                                            "$ref": "#/definitions/domain.ActorWithoutFilms"
                                         }
                                     }
                                 }
@@ -161,7 +161,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.ActorSWG"
+                            "$ref": "#/definitions/domain.ActorToAdd"
                         }
                     }
                 ],
@@ -552,7 +552,7 @@
                                         "films": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/domain.Film"
+                                                "$ref": "#/definitions/domain.FilmWithoutActors"
                                             }
                                         }
                                     }
@@ -600,7 +600,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Film"
+                            "$ref": "#/definitions/domain.FilmWithoutActors"
                         }
                     }
                 ],
@@ -614,7 +614,7 @@
                                     "type": "object",
                                     "properties": {
                                         "film": {
-                                            "$ref": "#/definitions/domain.Film"
+                                            "$ref": "#/definitions/domain.FilmWithoutActors"
                                         }
                                     }
                                 }
@@ -672,7 +672,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Film"
+                            "$ref": "#/definitions/domain.FilmToAdd"
                         }
                     }
                 ],
@@ -760,7 +760,7 @@
                                         "films": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/domain.Film"
+                                                "$ref": "#/definitions/domain.FilmWithoutActors"
                                             }
                                         }
                                     }
@@ -876,10 +876,54 @@
         }
     },
     "definitions": {
-        "domain.Actor": {
-            "type": "object"
+        "domain.ActorToAdd": {
+            "type": "object",
+            "properties": {
+                "birthdate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sex": {
+                    "$ref": "#/definitions/domain.Sex"
+                }
+            }
         },
-        "domain.ActorSWG": {
+        "domain.ActorToFilmAdd": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.ActorWithFilms": {
+            "type": "object",
+            "properties": {
+                "birthdate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "films": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.FilmWithoutActors"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sex": {
+                    "$ref": "#/definitions/domain.Sex"
+                }
+            }
+        },
+        "domain.ActorWithoutFilms": {
             "type": "object",
             "properties": {
                 "birthdate": {
@@ -911,8 +955,50 @@
                 }
             }
         },
-        "domain.Film": {
-            "type": "object"
+        "domain.FilmToAdd": {
+            "type": "object",
+            "properties": {
+                "actors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.ActorToFilmAdd"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "releaseDate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.FilmWithoutActors": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "releaseDate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
         },
         "domain.Sex": {
             "type": "string",
